fix: Readability of header on mobile

--- a/styles.css
+++ b/styles.css
@@ -49,13 +49,17 @@ body {
 
 header {
     width: 100%;
-    max-height: 15%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
     padding-right: calc(20px + 2vh);
     border-bottom: 3px solid var(--color-border);
+}
+.logo {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .logo > .logo-name {
@@ -201,7 +205,27 @@ header > ul > li > button:hover {
     }
 }
 
-
+@media (max-width: 840px) {
+    header {
+        flex-direction: column;
+        gap: 1vh;
+    }
+    .logo > .logo-name {
+        font-size: 60px;
+    }
+    .logo > .logo-slogan {
+        font-size: 24px;
+    }
+    .navButtons {
+        width: 70%;
+        gap: max(10%);
+    }
+    .navButtons button {
+        height: 100%;
+        padding: 2vw;
+        font-size: 25px;
+    }
+}
 
 @media (max-width: 580px) {
     .copyright-text {
